Release v0.1.1: Java 21+ FFM foreign function gateway, JMH benchmarks, and modernized FastJava blueprint